# space_simulation

./: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  light.h  main.cpp  material.h  mesh.h  primitives.h  shader.h  texture.h  vertex.h
assets/shaders/: fragment_core.glsl  fragment_core_multiple_point.glsl  fragment_core_phong.glsl  vertex_core.glsl
assets/shaders/asteroid/: fragment.glsl  vertex.glsl  vertex_no_matrix.glsl
assets/shaders/atmosphere/: fragment.glsl  vertex.glsl
assets/shaders/bloom/: fragment.glsl
assets/shaders/blur/: fragment.glsl
assets/shaders/convolution/: fragment.glsl  vertex.glsl
assets/shaders/cubemap/: fragment.glsl
assets/shaders/debug/: normal_fragment.glsl  normal_geometry.glsl
assets/shaders/gamma/: gamma_correction.glsl
assets/shaders/hdr/: fragment.glsl  vertex.glsl
assets/shaders/impostor/: fragment.glsl  vertex.glsl
assets/shaders/instanced/: fragment.glsl  vertex.glsl
assets/shaders/lighting/: dir_light.glsl  point_light.glsl
assets/shaders/material/: material.glsl  pbrMaterial.glsl  phongMaterial.glsl
assets/shaders/point/: fragment.glsl  vertex.glsl
assets/shaders/reflector/: fragment.glsl  reflector.glsl  reflector_helper.glsl  vertex.glsl
assets/shaders/skybox/: fragment.glsl  vertex.glsl
assets/shaders/ssbo/: point_light.glsl
assets/shaders/text/: fragment.glsl  vertex.glsl
assets/shaders/trail/: fragment.glsl  vertex.glsl
assets/shaders/ubo/: camera.glsl  dir_light.glsl  pbr_point_light.glsl  phong_dir_light.glsl  phong_point_light.glsl  point_light.glsl  point_shadow.glsl
include/camera/: camera.h
include/core/: application.h  input.h  inputManager.h
include/debug/: logger.h
include/graphics/: instanceLayouts.h  material.h  mesh.h  mesh.tpp  model.h  renderable.h  shader.h  skybox.h  texture.h  vertex.h  vertexAttribute.h  vertexLayouts.h
include/graphics/arrays/: vertexArray.h
include/graphics/bindings/: atmosphereTexture.h  impostor.h  texture.h  ubo.h
include/graphics/buffers/: buffer.h  framebuffer.h  renderBuffer.h
include/graphics/framebuffers/: framebuffer.h
include/graphics/materials/: asteroidMaterial.h  material.h  pbrMaterial.h  phongMaterial.h  textMaterial.h
include/graphics/primitives/: asteroid.h  asteroidShape.h  circle.h  cube.h  ellipsoid.h  plane.h  point.h  primitives.h  primitives.tpp  quad.h  sphere.h  triangle.h
include/graphics/state/: scopedBlending.h  scopedBuffer.h  scopedCullFace.h  scopedDepthFunc.h  scopedDepthMask.h  scopedDepthTest.h  scopedFramebuffer.h  scopedPolygonOffset.h  scopedShader.h  scopedTexture.h  scopedVertexArray.h  scopedViewport.h
include/maths/: constants.h  dateToJD.h  factorial.h  gaussian.h  momentsMaths.h  orbitalMaths.h  random.h  rk4.h
include/physics/: asteroid.h  asteroidSystem.h  atmosphere.h  atmosphereConstants.h  constants.h  keplerElements.h  moon.h  object.h  orbit.h  orbitalObject.h  orientationSource.h  physicsWorld.h  planet.h  positionSource.h  radiusSource.h  renderableObject.h  star.h  trail.h  transformSource.h  wisdomHolman.h
include/physics/integrators/: ias15.h  integratable.h  integrator.h  wisdomHolman.h
include/physics/structs/: gravityField.h  hapkeParameters.h  ias15Constants.h  inertiaProperties.h  keplerElements.h  materialProperties.h  radii.h  rotationalElements.h  tidalParameters.h
include/physics/systems/: asteroidSystem.h  system.h
include/render/: frustum.h  gaussianBlur.h  lodManager.h  modelSource.h  postProcess.h  renderConfig.h  renderContext.h  renderState.h  renderable.h  renderer.h  textRenderer.h  updatable.h
include/resources/: OBJloader.h  range.h  resourceManager.h  resourceManager.tpp  resources.h  threadPool.h
include/scene/: frameContext.h  scene.h  textRenderer.h
include/scene/light/: areaLight.h  directionalLight.h  light.h  lightManager.h  phongPointLight.h  pointLight.h
include/scene/shadow/: directionalShadow.h  pointShadow.h  shadow.h  shadowManager.h
shaders/: fragment_core.glsl  vertex_core.glsl
src/: main.cpp
src/camera/: camera.cpp
src/core/: application.cpp  application.h  camera.cpp  camera.h  input.cpp  inputManager.cpp
src/debug/: logger.cpp
src/graphics/: material.cpp  mesh.cpp  model.cpp  shader.cpp  skybox.cpp  texture.cpp
src/graphics/arrays/: vertexArray.cpp
src/graphics/buffers/: buffer.cpp  framebuffer.cpp  renderBuffer.cpp
src/graphics/framebuffers/: framebuffer.cpp
src/graphics/materials/: asteroidMaterial.cpp  material.cpp  pbrMaterial.cpp  phongMaterial.cpp  textMaterial.cpp
src/graphics/primitives/: asteroid.cpp  asteroidShape.cpp  circle.cpp  cube.cpp  ellipsoid.cpp  plane.cpp  point.cpp  primitives.cpp  quad.cpp  sphere.cpp  triangle.cpp
src/graphics/state/: scopedBlending.cpp  scopedBuffer.cpp  scopedCullFace.cpp  scopedDepthFunc.cpp  scopedDepthMask.cpp  scopedDepthTest.cpp  scopedFramebuffer.cpp  scopedPolygonOffset.cpp  scopedShader.cpp  scopedTexture.cpp  scopedVertexArray.cpp  scopedViewport.cpp
src/maths/: constants.cpp  dateToJD.cpp  factorial.cpp  gaussian.cpp  momentsMaths.cpp  orbitalMaths.cpp  random.cpp  rk4.cpp
src/physics/: asteroid.cpp  asteroidSystem.cpp  atmosphere.cpp  atmosphereConstants.cpp  constants.cpp  moon.cpp  object.cpp  orbit.cpp  orbitalObject.cpp  physicsWorld.cpp  planet.cpp  star.cpp  trail.cpp
src/physics/integrators/: wisdomHolman.cpp
src/physics/systems/: asteroidSystem.cpp
src/render/: gaussianBlur.cpp  lodManager.cpp  modelSource.cpp  postProcess.cpp  renderer.cpp  textRenderer.cpp
src/render/light/: light.cpp  light.h
src/render/material/: material.cpp
src/render/mesh/: mesh.cpp  mesh.h
src/render/model/: model.cpp  model.h
src/render/primitives/: primitives.cpp
src/render/shader/: shader.cpp  shader.h
src/render/texture/: texture.cpp
src/render/vertex/: vertex.h
src/resources/: OBJloader.cpp  resourceManager.cpp  threadPool.cpp
src/scene/: light.cpp  scene.cpp  textRenderer.cpp
src/scene/light/: directionalLight.cpp  light.cpp  lightManager.cpp  phongPointLight.cpp  pointLight.cpp
src/utils/: OBJloader.cpp
(+35 files in other folders)
